# pastchats-memory

./: .gitignore  README.md  pyproject.toml
docs/contracts/: CONTRACT_INDEX.yml  feature_architecture.yml  feature_mcp.yml  feature_prompt_memory.yml  journey_pre_task_recall.yml
docs/stories/: EPIC-001-prompt-memory.md  STORY-001-index-and-recall.md
skills/prompt-memory-recall/: SKILL.md
skills/prompt-memory-recall/agents/: openai.yaml
skills/prompt-memory-recall/references/: workflow.md
skills/prompt-memory-recall/scripts/: pre_task_recall.sh
src/pastchats_memory/: cli.py  config.py  embeddings.py  mcp_server.py  models.py  parsers.py  schema.sql  search.py  store.py
tests/: test_claude_code_hooks.py  test_index_and_search.py  test_store_turn.py
tests/contracts/: test_architecture_contract.py  test_mcp_feature_contract.py  test_memory_feature_contract.py
